# Lab2_Cmake-Make_Liubenchuk_Yablunovska

./: CMakeLists.txt  Makefile  README.md  compile.sh
examples/: CMakeLists.txt  Makefile  demo.cpp
